--- a/productos.html
+++ b/productos.html
@@ -31,59 +31,59 @@
         <div class="ProductosContenedores">
             <div class="ProductoContenido">
                 <img src="img/Productos/photo_2024-03-24_21-51-37.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 1', precio: 100, imagen:'img/Productos/photo_2024-03-24_21-51-37.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4> Colita Moño Rosa</h4>
+                <p>Cantidad: x2 </p>
+                <span>$1000</span>
+                <button onclick="agregarAlCarrito({nombre: 'Colita Moño Rosa', precio: 1000, imagen:'img/Productos/photo_2024-03-24_21-51-37.jpg', descripcion:'Cantidad: x2'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/photo_2024-03-24_21-51-26.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 2', precio: 100, imagen:'img/Productos/photo_2024-03-24_21-51-26.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4> Colita Moño Azul</h4>
+                <p>Cantidad: x2</p>
+                <span>$1500</span>
+                <button onclick="agregarAlCarrito({nombre: 'Colita Moño Azul', precio: 1500, imagen:'img/Productos/photo_2024-03-24_21-51-26.jpg', descripcion:'Cantidad: x2'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/9bd059a892e6655abbf32ae355e5b353.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 3', precio: 100, imagen:'img/Productos/9bd059a892e6655abbf32ae355e5b353.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Colita Moño Coquette </h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$900</span>
+                <button onclick="agregarAlCarrito({nombre: 'Colita Moño Coquette', precio: 900, imagen:'img/Productos/9bd059a892e6655abbf32ae355e5b353.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/1bcdd5606e7d636121d091bb702ac0b2.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 4', precio: 100, imagen:'img/Productos/1bcdd5606e7d636121d091bb702ac0b2.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Colitas Moños Blanco y Azul</h4>
+                <p>Combo completo</p>
+                <span>$1800</span>
+                <button onclick="agregarAlCarrito({nombre: 'Colitas Moños Blanco y Azul', precio: 1800, imagen:'img/Productos/1bcdd5606e7d636121d091bb702ac0b2.jpg', descripcion:'Combo completo'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/461a82f486aaad86b9d65aa212f107db.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 5', precio: 100, imagen:'img/Productos/461a82f486aaad86b9d65aa212f107db.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Moño Coquette Azul y Blanco</h4>
+                <p> Cantidad: x Unid.</p>
+                <span>$1500</span>
+                <button onclick="agregarAlCarrito({nombre: 'Moño Coquette Azul y Blanco', precio: 1500, imagen:'img/Productos/461a82f486aaad86b9d65aa212f107db.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/64c574bbbd77cc1451333f793d3fe25a.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 6', precio: 100, imagen:'img/Productos/64c574bbbd77cc1451333f793d3fe25a.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4> Moño Coquette Blanco y Celeste</h4>
+                <p>Cantidad: x2</p>
+                <span>$1800</span>
+                <button onclick="agregarAlCarrito({nombre: 'Moño Coquette Blanco y Celeste', precio: 1800, imagen:'img/Productos/64c574bbbd77cc1451333f793d3fe25a.jpg', descripcion:'Cantidad: x2'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/7778393259587103e5f45ccf826cc860.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 7', precio: 100, imagen:'img/Productos/7778393259587103e5f45ccf826cc860.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Vincha Moños</h4>
+                <p>Cantidad: x3</p>
+                <span>$2000</span>
+                <button onclick="agregarAlCarrito({nombre: 'Vincha Moños', precio: 2000, imagen:'img/Productos/7778393259587103e5f45ccf826cc860.jpg', descripcion:'Cantidad: x3'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/741bc23d9700d7d097bf554c00be1e59.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 8', precio: 100, imagen:'img/Productos/741bc23d9700d7d097bf554c00be1e59.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Moño Coquette</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1300</span>
+                <button onclick="agregarAlCarrito({nombre: 'Moño Coquette', precio: 1300, imagen:'img/Productos/741bc23d9700d7d097bf554c00be1e59.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
         </div>
 
@@ -91,59 +91,59 @@
         <div class="ProductosContenedores">
             <div class="ProductoContenido">
                 <img src="img/Productos/photo_2024-03-24_21-50-35.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 9', precio: 100, imagen:'img/Productos/photo_2024-03-24_21-50-35.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Almohada Vaquita</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1600</span>
+                <button onclick="agregarAlCarrito({nombre: 'Almohada Vaquita', precio: 1600, imagen:'img/Productos/photo_2024-03-24_21-50-35.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/4e455a48f061e2b5161d70612ac9b080.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 10', precio: 100, imagen:'img/Productos/4e455a48f061e2b5161d70612ac9b080.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Muñeca Piernas largas</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1800</span>
+                <button onclick="agregarAlCarrito({nombre: 'Muñeca Piernas largas', precio: 1800, imagen:'img/Productos/4e455a48f061e2b5161d70612ac9b080.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/4fd2c22d4fb69181334e03b4cc3d3a56.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 11', precio: 100, imagen:'img/Productos/4fd2c22d4fb69181334e03b4cc3d3a56.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Almohada Gatito</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1500</span>
+                <button onclick="agregarAlCarrito({nombre: 'Almohada Gatito', precio: 1500, imagen:'img/Productos/4fd2c22d4fb69181334e03b4cc3d3a56.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/66fdef09040ce827bec7fcca69b45591.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 12', precio: 100, imagen:'img/Productos/66fdef09040ce827bec7fcca69b45591.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Muñeca Coqueta</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1000</span>
+                <button onclick="agregarAlCarrito({nombre: 'Muñeca Coqueta', precio: 1000, imagen:'img/Productos/66fdef09040ce827bec7fcca69b45591.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/93fd9a33695aa3d68ba74f371e94c783.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 13', precio: 100, imagen:'img/Productos/93fd9a33695aa3d68ba74f371e94c783.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Muñeca Gatita</h4>
+                <p>Cantidad x Unid.</p>
+                <span>$1100</span>
+                <button onclick="agregarAlCarrito({nombre: 'Muñeca Gatita', precio: 1100, imagen:'img/Productos/93fd9a33695aa3d68ba74f371e94c783.jpg', descripcion:'Cantidad x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/5589a2b1e408c9894ebc7d2c6f21b9a4.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 14', precio: 100, imagen:'img/Productos/5589a2b1e408c9894ebc7d2c6f21b9a4.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Muñeca Duende Blanco</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1300</span>
+                <button onclick="agregarAlCarrito({nombre: 'Muñeca Duende Blanco', precio: 1300, imagen:'img/Productos/5589a2b1e408c9894ebc7d2c6f21b9a4.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/9250684287b27643701b5b78ac792a79.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 15', precio: 100, imagen:'img/Productos/9250684287b27643701b5b78ac792a79.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Muñeco Monito Celeste</h4>
+                <p>Cantidad: x Unid.</p>
+                <span>$1400</span>
+                <button onclick="agregarAlCarrito({nombre: 'Muñeco Monito Celeste', precio: 1400, imagen:'img/Productos/9250684287b27643701b5b78ac792a79.jpg', descripcion:'Cantidad: x Unid.'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
             <div class="ProductoContenido">
                 <img src="img/Productos/photo_2024-03-24_21-50-32.jpg">
-                <h4>nombre de Producto</h4>
-                <p>Descripcion</p>
-                <span>$100</span>
-                <button onclick="agregarAlCarrito({nombre: 'producto 16', precio: 100, imagen:'img/Productos/photo_2024-03-24_21-50-32.jpg', descripcion:'Descripcion del producto'})" class="boton-agregar-carrito">Agregar al carrito</button>
+                <h4>Combo Almohada + Muñeca</h4>
+                <p> sin descripcíon</p>
+                <span>$1700</span>
+                <button onclick="agregarAlCarrito({nombre: 'Combo Almohada + Muñeca', precio: 1700, imagen:'img/Productos/photo_2024-03-24_21-50-32.jpg', descripcion:'sin descripcíon'})" class="boton-agregar-carrito">Agregar al carrito</button>
             </div>
         </div>
 
