--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
         <title> Formulario de Pedidos </title>
         <link rel="stylesheet" href="style.css" type="text/css">
         <script src="script.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
 
     <body>
@@ -27,21 +28,21 @@
             </div>
         </main>
 
-        <h1>Formulario de consulta</h1>
-        <form id="formulario-consulta">
-            <label for="nombre">Nombre y Apellido:</label><br>
-            <input type="text" id="nombre" name="nombre"><br>
-            <label for="email">Correo Electrónico:</label><br>
-            <input type="email" id="email" name="email"><br>
-            <!--<label for="telefono">Telefono:</label><br>
-            <input type="tel" pattern="[0-9()+\- ]"><br>-->
-            <label for="asunto">Asunto:</label><br>
-            <input type="text" id="asunto" name="asunto"><br>
-            <label for="consulta">Consulta:</label><br>
-            <textarea id="consulta" name="consulta"></textarea><br>
-            <button type="submit">Enviar Consulta</button>
-            <!--Aqui se mostrara los productos seleccionados-->
-        </form>
+        <h1>Contacta con Nosotros</h1>
+        <p>
+
+        </p>
+        <p>¡Encuéntranos fácilmente o déjanos un mensaje! Estamos disponibles para ayudarte en lo que necesites.</p>
+
+        <div class="contacto">
+            <a href="tel:+123456789"><i class="fas fa-phone"></i> +123456789</a>
+            <a href="mailto:info@example.com"><i class="fas fa-envelope"></i> info@example.com</a>
+            <a href="https://wa.me/123456789"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        </div>
+
+        <p>
+            
+        </p>
 
     <footer class="credito"> 
         <p> Derechos Reservados © 2024 - Ruth Gomez</p>
