--- a/formulario.html
+++ b/formulario.html
@@ -42,7 +42,10 @@
 
                 </ul>
             </div>
-            <button type="submit">Enviar Pedido</button>
+            <button class="enviarPedido" type="submit">Enviar Pedido</button>
+            <p>
+                
+            </p>
         </form>
         <footer class="credito"> 
             <p> Derechos Reservados © 2024 - Ruth Gomez</p>
