--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -27,6 +27,25 @@
             </div>
         </main>
 
+        <div class="texto">
+            <h1>Historia de Mariposa Mágica</h1>
+            <div>
+                <p>En el corazón de nuestra creatividad y dedicación se encuentra aquí, con el alma y mente detrás de cada creación que sale de nuestro taller. </p>
+                <p>Desde que era pequeña, siempre he sentido una pasión ardiente por el arte de crear cosas hermosas con mis propias manos. </p>
+                <p>Mis primeros intentos fueron simples, pequeñas colitas para el cabello o muñecas improvisadas con retazos de tela, pero con el tiempo, esa pasión creció y se convirtió en mi vocación. </p>
+                <p>En Mariposa Mágica, nos dedicamos a dar vida a cositas lindas que traen alegría y encanto a la vida cotidiana. Desde delicadas colitas para el cabello hasta exquisitas muñecas de tela, cada pieza que creamos está impregnada de amor y cuidado. Nos esforzamos por capturar la esencia de la infancia y la belleza en cada detalle, para que puedas llevar contigo un pedacito de magia a donde quiera que vayas.</p>
+                <p>Nuestro compromiso va más allá de solo crear objetos; se trata de crear conexiones. </p>
+                <p>Creemos en la importancia de cada cliente y nos esforzamos por brindar una experiencia única y personalizada en cada interacción. </p>
+                <p>Ya sea que estés buscando el regalo perfecto para un ser querido o simplemente quieras darte un capricho, estamos aquí para ayudarte a encontrar esa pieza especial que iluminará tu día.</p>
+                <p>En Mariposa Mágica, cada puntada cuenta una historia, cada pieza es una expresión de creatividad y amor. Te invitamos a explorar nuestro mundo de cositas lindas y descubrir la magia que reside en cada una de ellas.</p>
+                
+                <p>Gracias por ser parte de nuestro viaje.</p>
+                
+                <p>Con cariño,</p>
+                <p>Mariposa Mágica.</p>
+            </div>
+        </div>
+
         <footer class="credito"> 
             <p> Derechos Reservados © 2024 - Ruth Gomez</p>
         </footer>
